tests/ui/track-diagnostics/track.stderr
error[E0425]: cannot find value `rust` in this scope
  --> $DIR/track.rs:LL:CC
   |
LL |     break rust
   |           ^^^^ not found in this scope
-Ztrack-diagnostics: created at compiler/rustc_resolve/src/late/diagnostics.rs:LL:CC

error[E0268]: `break` outside of a loop or labeled block
  --> $DIR/track.rs:LL:CC
   |
LL |     break rust
   |     ^^^^^^^^^^ cannot `break` outside of a loop or labeled block
-Ztrack-diagnostics: created at compiler/rustc_passes/src/loops.rs:LL:CC

error: internal compiler error: It looks like you're trying to break rust; would you like some ICE?

note: the compiler expectedly panicked. this is a feature.

note: we would appreciate a joke overview: https://github.com/rust-lang/rust/issues/43162#issuecomment-320764675

note: rustc $VERSION running on $TARGET

note: compiler flags: ... -Z ui-testing ... -Z track-diagnostics

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0268, E0425.
For more information about an error, try `rustc --explain E0268`.
